--- a/gb/22/10/31/n13856460.md
+++ b/gb/22/10/31/n13856460.md
@@ -31,31 +31,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11631409.md#1" target="_blank">正元：中共匪帮非我中华之邦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903795.md#1">神仙故事：明朝人奇遇王重阳，学剑仙之术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918908.md#1">【财商天下】刺激内需盯上民众存款 专家又出馊主意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918670.md#1">【中国禁闻】知名人权活动家：李大师揭真相救人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918982.md#1">【菁英论坛】中共官推特效药 或激发病毒突变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917798.md#1">胡鑫宇案官方通报被指疑点重重 舆论沸腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917542.md#1">官方称在学校附近找到胡鑫宇尸体 再引质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914456.md#1">在Costco可买到七种意想不到的东西</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918066.md#1">林心如晒照庆生 与霍建华甜蜜秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917417.md#1">庆结婚十周年 郑伊健蒙嘉慧日本街头放闪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918469.md#1">宋仲基官宣结婚 与英籍女友今日登记婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917173.md#1">BLACKPINK新添6项吉尼斯世界纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917160.md#1">既长寿又健康 美国82岁医生每天做这6件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916737.md#1">缓解疼痛 抗炎食物该怎么吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917008.md#1">【车评】初试首辆丰田纯电车 2023 Toyota bZ4X Limited</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916109.md#1">运动前吃什么、何时吃最健康？专家荐9种零食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917334.md#1">肠漏致多种疾病？这样做可改善</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/31/n13856460.htm">饮料杯自备率成长3倍 环保署订循环杯指引</a></p><hr>
