--- a/gb/23/2/3/n13921576.md
+++ b/gb/23/2/3/n13921576.md
@@ -32,44 +32,45 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920087.md#1">堪培拉患者看专科或做手术 等候期远超标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920086.md#1">首都政府最低收入员工将在三年内加薪34%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920085.md#1">全国惩教日 首都上百名惩教人员获表彰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921456.md#1">墨市华裔女作家获文学奖 奖金10万 澳洲最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921435.md#1">澳洲每天有逾200猫狗被杀 动物组织呼吁领养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921378.md#1">大白鲨现身新州南海岸著名海滩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921388.md#1">ASIO吁政府采取统一措施 应对各种威胁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921375.md#1">丢失辐射物仅罚款1千 总理批其荒谬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921329.md#1">纽卡斯尔天然气进口厂夭折 东岸供气或短缺</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964274.md#1">八成五全科医生少收费 为Medicare节省数亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964276.md#1">逾17万临居移民受困于低技能行业</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964221.md#1">学贷指数6月与通胀挂钩 借贷债务或增7%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964225.md#1">新州公立中学第四学期起将实施手机禁令</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964178.md#1">全澳住房缺口将超过10万 移民将加剧短缺</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964170.md#1">澳洲边境局查获38吨逾百种非法进口肉产品</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964127.md#1">3月份澳洲房价止跌上涨 悉尼引领全国市场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964113.md#1">警方在悉尼国王十字地区展开突击行动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964052.md#1">Woolworths复活节前削减龙虾等海鲜价格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964080.md#1">一女生荡秋千受重伤 南澳拟对游乐设施安检</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/4/n10761662.md#1" target="_blank">周晓辉：从崇祯皇帝救不了大明王朝说当下</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757209.md#1" target="_blank">共产暴政录：红四方面军在四川杀民众百万</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917669.md#1">正月冬雷异象 多方示警亡政之兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921789.md#1">【十字路口】摆平大案 中共精致维稳反露马脚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918315.md#1">【百年真相】活活饿死数十万人 长春围困战内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13921139.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试 大二 女生（2022年12月）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919619.md#1">央视报C919首飞用空客充场 遭行家及网民嘲笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919797.md#1">专家：危机重重 习的新班子难救经济</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919572.md#1">中共通报疫情下降 多地启动“核酸检测”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919634.md#1">不怕变“胖冰” 范冰冰过年到京城街头享美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921512.md#1">张小燕退休3年首上节目 亲揭不受访原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920411.md#1">胡歌秘婚当爸话题延烧 彭于晏意外登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920017.md#1">闻胡歌喜讯喊祝福 林依晨戏称彭于晏应该会困扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13921166.md#1">自曝从小就享受独处 梁朝伟分享克服社恐三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914714.md#1">护心护肝又护肾 这种天然饮料有神奇功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919945.md#1">美国富翁透露 有钱人如何用钱的8个秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918809.md#1">增强人体免疫力的9种自然方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920750.md#1">【美食天堂】春卷皮韭菜盒子做法～无需和面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920127.md#1">为什么民航机没有配备降落伞？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/3/n13921576.htm">卫生部长：全科医生短缺 政府将加强初级保健 ?</a></p><hr>
